[2024-01-09] [15:20] [components/move-items-form.tsx] Fixed barcode scanning to process scans immediately and added proper form submit handlers
[2024-01-09] [15:25] [components/move-items-form.tsx] Updated to use localStorage for storing move data instead of URL parameters
[2024-01-09] [15:25] [app/(main)/stock/move/destination/page.tsx] Created destination page for move stock process
[2024-01-09] [15:25] [app/api/stock/move/route.ts] Created API endpoint for moving stock between locations
[2024-01-09] [15:30] [app/api/locations/validate/route.ts] Created location validation endpoint
[2024-01-09] [15:35] [components/recent-movements.tsx] Created recent movements component to show all stock movements
[2024-01-09] [15:35] [app/(main)/page.tsx] Updated home page to show recent movements instead of recent putaways
[2024-01-09] [15:40] [components/recent-movements.tsx] Fixed recent movements component to be server-side
[2024-03-20] [10:00] [.env] Added SITE_PASSWORD environment variable
[2024-03-20] [10:00] [middleware.ts] Created new file for authentication middleware
[2024-03-20] [10:00] [app/login/page.tsx] Created new login page
[2024-03-20] [10:00] [app/api/login/route.ts] Created new login API route
[2024-03-20] [10:30] [components/remove-stock-selection.tsx] Fixed toast import path
[2024-03-20] [10:30] [components/stock-summary-table.tsx] Created stock summary table component
[2024-03-20] [11:00] [lib/db.ts] Enhanced Prisma client with better connection handling and auto-reconnect
[2024-03-20] [11:30] [lib/db.ts] Updated Prisma client to handle Render.com database spin-up behavior
[2024-03-20] [11:45] [components/stats-cards.tsx] Added retry logic and error handling for database queries
[2024-03-20] [12:00] [components/recent-movements.tsx] Added retry logic and improved error handling for database connections
[2024-03-20] [12:15] [.env] Fixed DATABASE_URL to use correct Render.com hostname